Bug 394692 - ASSERTION: read cursor is bad: 'mReadCursor != mWriteCursor', file xpcom/io/nsPipe3.cpp, line 539.  Narrow the criteria used to decide whether to fire the assertion to deal with a particular (valid) pattern of memory allocations.  r=biesi, a=bz